feat: create integration with db and nginx

--- a/node/Dockerfile.prod
+++ b/node/Dockerfile.prod
@@ -2,8 +2,22 @@ FROM node:22.14.0
 
 WORKDIR /usr/src/app
 
-COPY . .
+ENV DOCKERIZE_VERSION v0.9.3
+
+# Install dockerize
+RUN apt-get update \
+    && apt-get install -y wget \
+    && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
+    && apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
+
+# Copy custom entrypoint script
+COPY docker-entrypoint.sh /usr/local/bin/
+
+# Ensure the entrypoint script is executable
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 EXPOSE 3000
 
+# Use the entrypoint with CMD fallback for app execution
+ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["node", "index.js"]
