--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  db:
+    image: mysql:8.0
+    container_name: db
+    restart: always
+    tty: true
+    volumes:
+      - ./mysql:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=nodedb
+      - MYSQL_ROOT_PASSWORD=root
+    networks:
+      - nodenet
+
   nodeserver:
     build:
       context: ./node
@@ -7,6 +20,13 @@ services:
     container_name: nodeserver
     networks:
       - nodenet
+    volumes:
+      - ./node:/usr/src/app
+    tty: true
+    ports:
+      - 3000:3000
+    depends_on:
+      - db
 
   nginx:
     build:
@@ -17,7 +37,7 @@ services:
     networks:
       - nodenet
     ports:
-      - 8080:80
+      - "8080:80"
 
 networks: 
   nodenet:
